--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
+    "node-wit": "^2.0.0",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "raw-body": "^2.1.2",
