--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pg-hstore": "^2.3.2",
     "raw-body": "^2.1.2",
     "sequelize": "^3.8.0",
-    "sequelize-cli": "^1.9.1"
+    "sequelize-cli": "^1.9.1",
+    "streamifier": "^0.1.1"
   }
 }
